tests/should-fail/adaptors/swap.fk
-- #desc Swap an instance that is not there
-- #return Adaptor BChoice(Just 5, 0, 3, 2, 1, 4) is not a valid adaptor in ambient [£ | BChoice , BChoice , BChoice , BChoice] (line 20 , column 46)

data Pair X Y = pair X Y

interface BChoice = choose: Bool

fixTrue: {<BChoice>X -> X}
fixTrue x = x
fixTrue <choose -> k> = fixTrue (k true)

fixFalse: {<BChoice>X -> X}
fixFalse x = x
fixFalse <choose -> k> = fixFalse (k false)

prog: {[BChoice, BChoice]Pair Bool Bool}
prog! = pair (choose!) (<BChoice> choose!)

ff: {Pair Bool Bool}
ff! = fixTrue (fixFalse (fixTrue (fixFalse (<BChoice(s e d c b a -> s a d c b e)> prog!))))

main: {Unit}
main! = unit
